[gd_scene load_steps=5 format=3 uid="uid://cydxp5fep4nu3"]

[ext_resource type="Script" path="res://scripts/gem.gd" id="1_ifja8"]
[ext_resource type="Texture2D" uid="uid://dv5un8p43k81w" path="res://assets/sprites/pickups/GemStoneSprite.png" id="2_6o1mx"]
[ext_resource type="AudioStream" uid="uid://cjymv14n11bg" path="res://assets/audio/CollectGemDing.wav" id="3_n4o54"]

[sub_resource type="CircleShape2D" id="CircleShape2D_avv7c"]
radius = 6.22897

[node name="Gem" type="Area2D"]
scale = Vector2(5, 5)
script = ExtResource("1_ifja8")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_6o1mx")

[node name="GemSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_n4o54")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.8, -0.4)
scale = Vector2(1, 1)
shape = SubResource("CircleShape2D_avv7c")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
